<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KaiTest</string>

    <string name="image_from_camera">拍一张</string>
    <string name="image_from_galley">选择图片</string>
    <string name="can_not_open_image">无法打开图片</string>

    <string name="icon_qian">&#x94b1;</string>
    <string name="icon_hong">&#x7ea2;</string>
    <string name="icon_hong_empty">&#xe62c;</string>
    <string name="icon_text_setting">&#xe602;</string>
    <string name="icon_flush">&#xe677;</string>
    <string name="icon_flush2">&#xe65c;</string>
    <string name="icon_hui">&#xe64b;</string>
    <string name="icon_circle">&#xe656;</string>
    <!--<string name="icon_kai">&#x51ef;</string>-->


    <string name="restore">Restore</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="empty">Empty Adapter</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="options">OPTIONS</string>
    <string name="actions">ACTIONS</string>
    <string name="restore_list">Restore list</string>
    <string name="open_expandable_list">Open expandable list</string>
    <string name="update_list">Update list</string>
    <string name="clear_list">Clear list</string>
    <string name="sticky_header">Sticky header</string>
    <string name="fade_header">Fade header</string>
    <string name="draw_behind_header">Draw behind header</string>
    <string name="fast_scroll">Fast scroll</string>

    <string name="pull_down_refresh">下拉刷新</string>
    <string name="release_refresh">松开刷新</string>
    <string name="refreshing_prompt">正在刷新…</string>
    <string name="last_updated">上次刷新：</string>
    <string name="updated_minutes">分钟前</string>

    <string name="cupcake">Cupcake</string>
    <string name="donut">Donut</string>
    <string name="eclair">Eclair</string>
    <string name="froyo">Froyo</string>
    <string name="gingerbread">Gingerbread</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="ics">Ice Cream Sandwich</string>
    <string name="jellybean">Jelly Bean</string>

    <string name="share">分享</string>
    <string name="share_to_sina_weibo">分享到新浪微博</string>
    <string name="share_to_qq_weibo">分享到腾讯微博</string>
    <string name="share_to_qqzone">分享到QQ空间</string>

    <string name="qzone_accredit_fail">QQ空间授权失败</string>
    <string name="sina_weibo_accredit_fail">新浪微博授权失败</string>
    <string name="qq_weibo_accredit_fail">腾讯微博授权失败</string>
    <string name="sina_weibo_share_success">新浪微博分享成功</string>
    <string name="qq_weibo_share_success">腾讯微博分享成功</string>
    <string name="qzone_share_success">QQ空间分享成功</string>
    <string name="sina_weibo_share_fail">新浪微博分享失败</string>
    <string name="qq_weibo_share_fail">腾讯微博分享失败</string>
    <string name="qzone_share_fail">QQ空间分享失败,请重新授权</string>

    <string name="share_to">分享到</string>
    <string name="share_no_network">没有网络，请连接网络</string>
    <string name="no_wechat">您没有安装微信，暂不能分享</string>
    <string name="wechat_not_support_friend">您的微信，不支持发送朋友圈，请更新微信</string>

    <string name="share_friend">身边好友</string>
    <string name="music_circle">音乐圈</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_weibo">腾讯微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="qq">QQ好友</string>
    <string name="wechat">微信好友</string>
    <string name="wechat_friend">朋友圈</string>
    <string name="other">其他</string>

    <string name="hide_danmaku">hide</string>
    <string name="show_danmaku">show</string>
    <string name="pause_danmaku">pause</string>
    <string name="resume_danmaku">resume</string>
    <string name="send_danmaku">发一条</string>
    <string name="send_danmakus">定时发</string>
    <string name="cancel_sending_danmakus">取消定时</string>
    <string name="release">release</string>
    <string name="rotate">旋转屏幕</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
