<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="top"
        android:background="#8a006161"></LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:background="#8acc0000"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mv_position"
                android:text="00:00"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:max="100"
                android:id="@+id/mv_progress_seek_bar"
                android:progressDrawable="@drawable/progressbar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:thumb="@drawable/mv_thumb_small"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:layout_height="wrap_content"
                android:thumbOffset="0dp" />

            <TextView
                android:id="@+id/mv_duration"
                android:text="00:00"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dip">

            <Button
                android:id="@+id/rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate" />

            <Button
                android:id="@+id/btn_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_danmaku" />

            <Button
                android:id="@+id/btn_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_danmaku" />

            <Button
                android:id="@+id/btn_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause_danmaku" />

            <Button
                android:id="@+id/btn_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_danmaku" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_danmaku" />

            <Button
                android:id="@+id/btn_send_danmakus"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_danmakus" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>